syntax = "proto3";

package querier.v1;

import "google/v1/profile.proto";
import "types/v1/types.proto";

service QuerierService {
  rpc ProfileTypes(ProfileTypesRequest) returns (ProfileTypesResponse) {}
  rpc LabelValues(LabelValuesRequest) returns (LabelValuesResponse) {}
  rpc LabelNames(LabelNamesRequest) returns (LabelNamesResponse) {}
  rpc Series(SeriesRequest) returns (SeriesResponse) {}
  rpc SelectMergeStacktraces(SelectMergeStacktracesRequest) returns (SelectMergeStacktracesResponse) {}
  rpc SelectMergeProfile(SelectMergeProfileRequest) returns (google.v1.Profile) {}
  rpc SelectSeries(SelectSeriesRequest) returns (SelectSeriesResponse) {}
}

message ProfileTypesRequest {}

message ProfileTypesResponse {
  repeated types.v1.ProfileType profile_types = 1;
}

message LabelValuesRequest {
  string name = 1;
}

message LabelValuesResponse {
  repeated string names = 1;
}

message LabelNamesRequest {}

message LabelNamesResponse {
  repeated string names = 1;
}

message SeriesRequest {
  repeated string matchers = 1;
}

message SeriesResponse {
  repeated types.v1.Labels labels_set = 2;
}

message SelectMergeStacktracesRequest {
  string profile_typeID = 1;
  string label_selector = 2;
  int64 start = 3; // milliseconds since epoch
  int64 end = 4; // milliseconds since epoch
  int64 max_nodes = 5;
}

message SelectMergeStacktracesResponse {
  FlameGraph flamegraph = 1;
}

message FlameGraph {
  repeated string names = 1;
  repeated Level levels = 2;
  int64 total = 3;
  int64 max_self = 4;
}

message Level {
  repeated int64 values = 1;
}

message SelectMergeProfileRequest {
  string profile_typeID = 1;
  string label_selector = 2;
  int64 start = 3; // milliseconds since epoch
  int64 end = 4; // milliseconds since epoch
}

message SelectSeriesRequest {
  string profile_typeID = 1;
  string label_selector = 2;
  int64 start = 3; // milliseconds since epoch
  int64 end = 4; // milliseconds since epoch
  repeated string group_by = 5;
  double step = 6; // Query resolution step width in seconds
}

message SelectSeriesResponse {
  repeated types.v1.Series series = 1;
}
